# cpp-I

./: .gitignore  CMakeLists.txt  main.cpp  tuple.hpp
enum_classes/: CMakeLists.txt  main.cpp
labs/2025/cv2_1415/: main.cpp
labs/2025/cv2_1645/: CMakeLists.txt  main.cpp
labs/2025/cv3_1415/: CMakeLists.txt  main.cpp
labs/2025/cv3_1645/: main.cpp
labs/2025/cv4_1415/: main.cpp
labs/2025/cv4_1645/: main.cpp
labs/2025/cv5_1415/: main.cpp
labs/2025/cv5_1645/: main.cpp
labs/2025/cv7_1415/: CMakeLists.txt  main.cpp
labs/2025/cv7_1645/: main.cpp
labs/2025/cv8_1415/: main.cpp
labs/2025/cv8_1645/: CMakeLists.txt  main.cpp
labs/2025/cv9_1415/: main.cpp
labs/2025/cv9_1645/: main.cpp
labs/2026/cv2_1415/: main.cpp
labs/2026/cv2_1645/: main.cpp
labs/2026/cv3_1415/: main.cpp
labs/2026/cv3_1645/: main.cpp
labs/2026/cv4_1415/: main.cpp
labs/2026/cv4_1645/: main.cpp
labs/2026/cv5_1415/: main.cpp  t1.cpp  t2.cpp  test.cpp
labs/2026/cv5_1645/: main.cpp  test.cpp
labs/2026/cv7_1415/: CMakeLists.txt  main.cpp
labs/2026/cv7_1645/: loop.cpp  main.cpp  test.cpp
labs/2026/cv8_1415/: main.cpp  tuple.hpp
labs/2026/cv8_1645/: CMakeLists.txt  main.cpp  tuple.hpp
rvo/: rvo.cpp
tcp_server/: CMakeLists.txt  linux_client.cpp  linux_server.cpp  sf_client.cpp  sf_server.cpp
templates/: main.cpp  tuple.hpp
threads/: CMakeLists.txt  main.cpp
variadic_basics/: CMakeLists.txt  main.cpp
variant/: CMakeLists.txt  main.cpp  variant.hpp
vector/: CMakeLists.txt  main.cpp  vector.hpp
visitor/: CMakeLists.txt  main.cpp
(+2 files in other folders)
